# aiorinnai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  cliff.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/copilot/: copilot-instructions.md
.github/instructions/: commits.instructions.md
.github/workflows/: ci.yml  python-publish.yml  release.yml
aio-rinnaicontrolr/: __init__.py
aiorinnai/: __init__.py  api.py  aws_srp.py  client.py  const.py  device.py  errors.py  types.py  user.py
tests/: __init__.py  test_base.py
